version 4.0.12